<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Loanwiser Partner</string>
    <string name="welcome">Welcome to </string>
    <string name="login">Login</string>
    <string name="registr">Register</string>
    <string name="share">Share</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="msg_no_deep_link">No deep link received.</string>
    <string name="dashboards">Lead Dashboard</string>
    <string name="lead_details">Lead Detail Dashboard</string>
    <string name="cinterview">Customer Interview</string>
    <string name="list_lead">List of Leads</string>
    <string name="wt_termss">I accept whatsapp terms and conditions</string>
    <string name="next">Next</string>
    <string name="via_">Save and </string>
    <string name="Download">Download</string>
    <string name="bank_analay_txt">Without the required Documents, this  lead cannot be processed further.</string>
    <string name="lead_creation">Lead Creation</string>
    <string name="bank_statment">Bank Statement Upload</string>
    <string name="payment">Payment</string>
    <string name="referfriend">Refer <b>Loanwiser App</b> to your friends and Earn referral income of 50 Credit Coins</string>
    <string name="referfriend12">* Credit coins can be used in fetching Credit Reports and in running Bank Statement Analysis for your Leads.</string>
    <string name="referfriend1">Refer <b> Loanwiser partner App </b>to Your Friends in loan services business and Earn referral bonus
                        as follows.  \n  \u2022 50 credit coins when your friend installs the app \n  \u2022 150 credit coins when your friend submits a lead to Loanwiser
                        (Step 3 Completed lead)"</string>
    <string name="refereran"><![CDATA[Refer & earn]]></string>
    <string name="refereran1"><![CDATA[Share & Earn]]></string>
    <string name="dynamic_links_uri_prefix">https://loanwiser.page.link/iGuj</string>
    <string name="name">Name</string>
    <string name="DFD">Disbursed From Date</string>
    <string name="DTD">Disbursed To Date</string>
    <string name="name_cs">Customer Name</string>
    <string name="mob">Mobile No</string>
    <string name="signin">SIGN IN</string>
    <string name="leadverif">Customer Verification</string>
    <string name="signup1">SIGN UP</string>
    <string name="type">Business Type</string>
    <string name="address">Address</string>
    <string name="otp">Verify OTP</string>
    <string name="enterotp">Enter OTP</string>
    <string name="enterotp1">OTP Verification</string>
    <string name="password">Name</string>
    <string name="bussiness">Business you are in..?</string>
    <string name="bussiness_type">Business Type</string>
    <string name="city_you">Which City do you live in ?</string>
    <string name="state_you">Which State are you from?</string>
    <string name="btn_ok">OK</string>
    <string name="door">Door No/ Unit No</string>
    <string name="buliding">Building Name</string>
    <string name="street">Street Name</string>
    <string name="locality">Locality</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="app_sign">Sign Up</string>
    <string name="ur_number">Your Mobile Number</string>
    <string name="ind">India (+91)</string>
    <string name="listapp1">Type Of Loan</string>
    <string name="listapp2">Step Completion Details</string>
    <string name="apply">Apply Now</string>
    <string name="error_empty_mobile1">Please enter the Loan Amount above 10,000</string>
    <string name="error_empty_loan">Please enter the Loan Amount above 50,000 </string>
    <string name="error_empty_mobile2">Please Enter the valid Pin code</string>
    <string name="verif">Mobile Verification</string>
    <string name="otp_enter">Enter the OTP below in case if we fail to detect the SMS automatically</string>
    <string name="otp_lead_enter">Enter the OTP send to the customer to verify mobile number</string>
    <string name="pls_enter">Please enter your mobile number</string>
    <string name="pls_enter_lead_mob">Please enter your Customer mobile number</string>
    <string name="pls_enter_new">Please enter your mobile number to update with exiting number</string>
    <string name="pls_enter1" tools:ignore="StringEscaping">Heres your list of customers application</string>
    <string name="pls_enter_otp">Please enter your mobile number</string>
    <string name="send_txt">We will send you a "\n" One time SMS message</string>
    <string name="generate">Get OTP</string>
    <string name="submit">Verify OTP</string>
    <string name="upload_doc">Upload Document</string>
    <string name="track_status">Track Status \n(These steps are processed by Loanwiser)</string>
    <string name="error_postal">Please enter the Pincode</string>
    <string name="city_type">Select the City</string>
    <string name="state_type">Select the State</string>
    <string name="mobileerror">Enter a valid mobile number</string>
    <string name="no_leads_data" tools:ignore="ExtraTranslation">You have not added any lead yet.
        Your leads will \n appear here once you start adding them </string>
    <string name="noask_leads_data" tools:ignore="ExtraTranslation">No Ask Leads found</string>
    <string name="listapp">List of Applications</string>
    <string name="addl">Add your Leads</string>
    <string name="update_lead">Update your Leads</string>
    <string name="validation_state">Select the Loan Typ</string>
    <string name="app_add_lead">Add Lead</string>
    <string name="invalid_ifcse">Please enter a IFSC Code</string>
    <string name="saveB">Save</string>
    <string-array name="loan_type">
        <item>Home Loan</item>
        <item>Loan Against Property</item>
        <item>Personal Loan</item>
        <item>Business Loan</item>
    </string-array>
    <string name="property_type">Property identified</string>
    <string name="add_co_app">Add your Co-applicants</string>
    <string name="Applicant11">Applicant Info</string>
    <string-array name="applicant">
        <item>Salaried Individual</item>
        <item>Self Employed Business</item>
    </string-array>
    <string name="btnTakePicture">Capture Image</string>
    <string name="available_Operation">Please Select the Available Operational States:</string>
    <string name="st">Tamil Nadu"\n" Karnataka"\n" Andhra"\n" Thelungana"\n" Rajasthan</string>
    <string name="offer">Lists of offers generated</string>
    <string name="b_holder_name">Account holder name</string>
    <string name="b_ac_no">Account number :</string>
    <string name="b_ac_no1">Confirm account number</string>
    <string name="b_ac_type">Account Type</string>
    <string name="bank_name">Name of the bank</string>
    <string name="branch">Bank Branch</string>
    <string name="pay_mode">Mode of Payment through</string>
    <string name="proceed">Proceed</string>
    <string name="notestr">Please submit to Loanwiser by clicking on the button if you want to process for below Banks.</string>
    <string name="pay_out_details">Payout Details</string>
    <string name="ifsc">IFSC code</string>
    <string name="internet">Internet</string>
    <string name="mbank">Mobile</string>
    <string name="d_leads">Disbursed Leads List</string>
    <string name="d_amount">Disbursed Amount</string>
    <string name="last_updated">Last Updated</string>
    <string name="c_amount">Commission Amount</string>
    <string name="d_leads_details">Disbursed Leads Details</string>
    <string name="lead_creation1">Lead Creation</string>
    <string name="viability_re">Viability Report</string>
    <string name="step1_completion">Step 1 Completion</string>
    <string name="credit_report_gen">Credit Report Generation</string>
    <string name="doc_upload1">Document Upload</string>
    <string name="bank_statement_anlysis_report">Bank Statement Analysis Report Generation</string>
    <string name="bank_analysis_not_met">you have not met the document requirement of
        any of the eligible banks. Please try to provide
        the documents for at least one of the bank listed below. Without the required Documents, this lead cannot be processed further.</string>
    <string name="internet_b">Internet Banking</string>
    <string name="mbank_b">Mobile Banking</string>
    <string name="open_my">Open My</string>
    <string name="App1">1</string>
    <string name="App2">2 </string>
    <string name="App3">3 </string>
    <string name="App4">4 </string>
    <string name="gamil_reg">Register with Gmail</string>
    <string name="btnUploadToServer">Upload </string>
    <string name="upload">Upload</string>
    <string name="upload1">Save and Upload </string>
    <string name="NoApplicant">No Co Applicant</string>
    <string name="Applicant1">Co Applicant 1</string>
    <string name="Applicant2">Co Applicant 2</string>
    <string name="Applicant3">Co Applicant 3</string>
    <string name="Applicant4">Co Applicant 4</string>
    <string name="prop">Generated Loan Offer</string>
    <string name="Applicant">Applicant</string>
    <string name="choose_one">Upload any one of these Document</string>
    <string name="loan_purpose1">This loan can be used for</string>
    <string name="home_loan1">Own your dream house through Home Loan with lower interest rates. Loans starting as low as 8.5% Through Home Loan you can</string>
    <string name="home_purpose2"> Purchase house</string>
    <string name="home_purpose3"> Construct house in your land</string>
    <string name="home_purpose4"> Improvement loan</string>
    <string name="home_purpose5"> Purchase Plot</string>
    <string name="home_purpose6"> Renovate/Extend your exisiting House</string>
    <string name="home_purpose7"> Balance Transfer </string>
    <string name="personal_purpose3"> Wedding Expenses</string>
    <string name="business_loan">Need money to meet your immediate Business Expenses, Unsecured Business Loans are offered to small and medium Businesses</string>
    <string name="business_purpose2"> Business Expansion</string>
    <string name="business_purpose3"> Equipment Purchase</string>
    <string name="business_purpose4"> Additional Working Capital</string>
    <string name="business_purpose5">4 Self-Employed Person / Professional - CA, Doctor, etc. </string>
    <string name="business_purpose6" tools:ignore="ExtraTranslation">5 Shopkeeper </string>
    <string name="business_purpose7">6 Producer </string>
    <string name="back">Back</string>
    <string name="pleaseread">Please Read</string>
    <string name="chooseskip_pay">Since you chose to skip payment</string>
    <string name="bulleted_listone">
        <li>Viability of loan based on Credit Report and Bank statement will not be done at this stage.
        </li> </string>
    <string name="bulleted_listthree"><li>In the next step, You\'ll need to submit all the required documents based on which the detailed viability assessment will be done.</li></string>
    <string name="pay_process">Hence,this will be a slow process compared to instant Viability Report option under our Standard plan, which we highly recommend to fast track your loan processing</string>
    <string name="proceed_anyway">Proceed Anyway</string>
    <string name="viabilitycheck">-  Viability Check</string>
    <string name="via_descone">You will get 60% of your Total Partner Benefit</string>
    <string name="instant_credit">Instant Credit Assessment</string>
    <string name="instant_desc">You will get 80% of your Total Partner Benefit</string>
    <string name="eligiblity_des">You will get 80% of your Total Partner Benefit</string>
    <string name="eligiblity_check">Eligibility Check</string>
    <string name="add_docum">Add Document</string>
    <string name="save_proceed"><![CDATA[SAVE & PROCEED]]></string>
    <string name="viewpdf">VIew PDF</string>
</resources>