<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.loanwiser.partnerapp.Slider.View_More">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/home_loan"
                android:scaleType="fitXY"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/LorgeText"
                        android:textStyle="bold"
                        android:text="Loan Purpose"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/sub_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/SmallText"
                        android:text="@string/home_loan1"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/sub_id1"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/SmallText"
                        android:text="@string/loan_purpose1"/>

                    <LinearLayout

                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id3"  style="@style/SmallText"
                            android:gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose2"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id4"  style="@style/SmallText"
                            android:gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose3"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id5"
                            android:gravity="left"  style="@style/SmallText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose4"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id6"
                            android:gravity="left"   style="@style/SmallText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose5"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id7"
                            android:gravity="left"   style="@style/SmallText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose6"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/sub_id8"
                            android:gravity="left"   style="@style/SmallText"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"

                            android:text="@string/home_purpose7"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/apply_now1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/capsul_button3"
                android:textColor="@color/white"
                android:text="@string/apply"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>